<resources>
    <string name="app_name">FoodMenuPlanner</string>
    <string name="shopping_list_button">Shopping List</string>
    <string name="veg_switch">Veg Only</string>
    <string name="calendar_instruction">Swipe left for more dates</string>
    <string name="bkf_text_view">Breakfast</string>
    <string name="hide_bkf_text_view">Hide Breakfast</string>
    <string name="question">How many eating?</string>
    <string name="checkbox">Add to List</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="integer_text_view">0</string>
    <string name="lunch_text_view">Lunch</string>
    <string name="hide_lunch_text_view">Hide Lunch</string>
    <string name="dinner_text_view">Dinner</string>
    <string name="hide_dinner_text_view">Hide Dinner</string>
    <string name="menu_navigation">Back to Menu</string>
    <string name="ing_text_view">Ingredients</string>
    <string name="serving_size_text_view">Serving Size:</string>
    <string name="filter_text">Does not Contain:</string>
    <string name="apply_filter_button">Apply Filters</string>
    <string name="remove_filter_button">Remove Filters</string>
    <string name="shopping_list_timeline">Show list for following no. of days</string>
    <string name="shopping_list_text_view">Shopping List</string>
    <string name="shopping_instruction">Remove items from shopping list by checking box</string>

</resources>
