<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".ShoppingListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appToolbar"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shoppingListBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/shopping_list_button"
                android:textColor="@color/colorWhite"
                android:layout_alignParentStart="true" />

            <Switch
                android:id="@+id/vegSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/filterBtn"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/filterBtn"
                android:layout_marginTop="8dp"
                android:switchPadding="5dp"
                android:text="@string/veg_switch" />

            <ImageButton
                android:id="@+id/filterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/filter_icon" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appToolbar"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/closeFilterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/filterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/closeFilterBtn"
            android:text="@string/filter_text"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:paddingLeft="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filterRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/filterTextView"/>

        <Button
            android:id="@+id/applyFilterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filterRecyclerView"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/apply_filter_button"
            android:textSize="15sp"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/removeFilterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applyFilterBtn"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorOrange"
            android:text="@string/remove_filter_button"
            android:textSize="15sp"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</RelativeLayout>