<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/dinnerMenu"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Menu List"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/dinnerArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/dinnerMenu"
            android:layout_toRightOf="@id/dinnerMenu"
            android:src="@drawable/ic_arrow_right"/>

        <TextView
            android:id="@+id/dinnerQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dinnerMenu"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/question"
            android:textColor="@color/colorDarkGrey"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/dinnerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dinnerQuestion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/checkbox"
            android:textSize="15sp"
            android:textColor="@color/colorDarkGrey"/>

        <Button
            android:id="@+id/dinnerIncreaseBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/dinnerQuestion"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGold"
            android:gravity="center"
            android:text="@string/increase_button"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/dinnerCounterTextView"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_below="@id/dinnerQuestion"
            android:layout_marginTop="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@id/dinnerIncreaseBtn"
            android:layout_toStartOf="@id/dinnerIncreaseBtn"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <Button
            android:id="@+id/dinnerDecreaseBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@id/dinnerQuestion"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:layout_toLeftOf="@id/dinnerCounterTextView"
            android:layout_toStartOf="@id/dinnerCounterTextView"
            android:background="@color/colorGold"
            android:gravity="center"
            android:text="@string/decrease_button"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>